fix horizontal scroll issue

--- a/src/pages/Homepage/ui/Homepage.module.css
+++ b/src/pages/Homepage/ui/Homepage.module.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     background-color: var(--color-purple);
+    overflow-x: hidden;
 }
 
 .contentContainer {
